<resources>
    <string name="START">START</string>
    <string name="STOP">STOP</string>
    <string name="Year">Y</string>
    <string name="Month">M</string>
    <string name="Day">D</string>
    <string name="about">About</string>
    <string name="about_page_desc"><![CDATA[Audio & music player, 5 band equalizer, id3 tag editor, MP3 & Ringtone cutter]]></string>
    <string name="about_text"/>
    <string name="about_title">About Muziko</string>
    <string name="add_account">Add Account</string>
    <string name="add_cloud_account">Please add a cloud account to upload to</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="add_ignore">Add To Ignore</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="add_to_fav">Add To Favorites</string>
    <string name="add_to_favs">Add To Favorites</string>
    <string name="add_to_home">Add to Home</string>
    <string name="add_to_library">Add To Library</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="add_to_queue">Add To Queue</string>
    <string name="added_to_home_folders">Added as Home Folder</string>
    <string name="admobInterstitial">ca-app-pub-6491023872523776/8390442927</string>
    <string name="advanced_options_net_3gup_name">3G and Wifi</string>
    <string name="advanced_options_net_any_name">Any network</string>
    <string name="advanced_options_net_wifi_name">Wifi only</string>
    <string name="advanced_options_type_battery_name">Conserve Battery</string>
    <string name="advanced_options_type_custom_name">Custom</string>
    <string name="advanced_options_type_same_as_battery_name">Same as for battery</string>
    <string name="advanced_options_type_standard_name">Standard</string>
    <string name="advanced_options_when_10_name">After ten tracks</string>
    <string name="advanced_options_when_1_name">After every track</string>
    <string name="advanced_options_when_25_name">After 25 tracks</string>
    <string name="advanced_options_when_5_name">After five tracks</string>
    <string name="advanced_options_when_never_name">When you press the scrobble now button</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="album">Album</string>
    <string name="album_art_cleared">Album art has been cleared</string>
    <string name="album_art_updated">Album Art has been updated</string>
    <string name="album_name">Album Name</string>
    <string name="album_not_found">Album not found!</string>
    <string name="albums">Albums</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_title_success">Success</string>
    <string name="all">All</string>
    <string name="amazon">Amazon</string>
    <string name="amazon_account_connected">Amazon account successfully connected</string>
    <string name="amazon_connection_failed">Unable to connect Amazon account</string>
    <string name="app_id"/>
    <string name="app_name">Muziko</string>
    <string name="arabic">Arabic</string>
    <string name="artist">Artist</string>
    <string name="artist_name">Muziko-Ringtone</string>
    <string name="artists">Artists</string>
    <string name="artwork_settings">Artwork Settings</string>
    <string name="au_clip">Muziko_shared_auclip</string>
    <string name="auth_bad_auth">Wrong username/password</string>
    <string name="auth_client_banned">This version of the app is deprecated, please upgrade</string>
    <string name="auth_internal_error">Internal error</string>
    <string name="auth_just_error">Error, retrying…</string>
    <string name="auth_network_error_retrying">Network error, retrying…</string>
    <string name="auth_network_unfit">Not allowed to submit data on network, change in Options screen</string>
    <string name="auth_server_error">Server error: %1, retrying…</string>
    <string name="auth_timing_error">Client side timing error, retrying…</string>
    <string name="auth_updating">Authenticating…</string>
    <string name="auto_download_library">Auto sync library with cloud</string>
    <string name="auto_download_library_desc">Library will sync automatically</string>
    <string name="auto_download_streaming">Auto download playing file</string>
    <string name="auto_download_streaming_desc">Muziko will download file when streaming</string>
    <string name="auto_resume">Headset Detection</string>
    <string name="auto_resume_bluetooth">Bluetooth Detection</string>
    <string name="auto_resume_bluetooth_desc">Auto resume/pause when a bluetooth headset is detected</string>
    <string name="auto_resume_desc">Auto resume/pause when a headset is detected</string>
    <string name="bad_extension_error">Sorry, Muziko is not yet able to edit files of type</string>
    <string name="banner_ad_unit_id">ca-app-pub-6491023872523776/3782654126</string>
    <string name="bass">Bass</string>
    <string name="block">Block</string>
    <string name="block_contacts">Block Contacts</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_rationale">You need to grant access to bluetooth for bluetooth options to work</string>
    <string name="box">Box</string>
    <string name="box_account_connected">Box account connected</string>
    <string name="box_connection_failed">Unable to connect Box account</string>
    <string name="buffering_song">Buffering song</string>
    <string name="buy">Buy</string>
    <string name="buy_now">BUY NOW</string>
    <string name="by">by</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="change_language">Change Language</string>
    <string name="change_language_desc">Change the language of Muziko</string>
    <string name="choose">Choose</string>
    <string name="choose_contact">Choose Contact</string>
    <string name="choose_start_screen">Choose start screen</string>
    <string name="choose_start_screen_desc">Screen to return to when opening the app</string>
    <string name="claim">Claim</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_credentials">Clear credentials</string>
    <string name="clear_credentials_desc">Clear your actionUser credntials for Last.fm</string>
    <string name="client_id">clident_id</string>
    <string name="client_ver">client_ver</string>
    <string name="close">Close</string>
    <string name="cloud">Cloud</string>
    <string name="cloud_account_already_added">Cloud account has already been added</string>
    <string name="cloud_account_removed">Cloud account successfully removed</string>
    <string name="cloud_drive_not_connected">Unable to process. Cloud drive still being started</string>
    <string name="cloud_settings">Cloud Settings</string>
    <string name="confirm_block_contacts">Are you want to block these contacts?</string>
    <string name="confirm_clear_all_creds">Are you sure you want to clear your actionUser credentials for all logged in accounts? This will also remove any unsubmitted scrobbles.</string>
    <string name="confirm_delete_all_sc">Are you sure you want to clear all tracks in the cache for %1? This operation cannot be undone.</string>
    <string name="confirm_delete_all_sc_from_all">Are you sure you want to clear all tracks in the cache? This operation cannot be undone.</string>
    <string name="confirm_delete_sc">Are you sure you don\'t want to scrobble this track to %1? This operation cannot be undone.</string>
    <string name="confirm_delete_sc_from_all">Are you sure you don\'t want to scrobble this track? This operation cannot be undone.</string>
    <string name="connecting_cloud_drive">Connecting Cloud Drive</string>
    <string name="connection_error">Connection error retrieving lyrics</string>
    <string name="contacts">Contacts</string>
    <string name="continue_text">Continue</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="coverart_dl_progress">Downloading cover art… %1$d/%2$d - Swipe to cancel</string>
    <string name="create">CREATE</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="creds_required">Credentials REQUIRED to work properly</string>
    <string name="current_version">Current Version</string>
    <string name="cut">Cut</string>
    <string name="cut_tones">CUT TONES</string>
    <string name="cutter">MP3 Cutter</string>
    <string name="cutter_desc">Cut the best part of your MP3 song and use it as your ringtone</string>
    <string name="data_charges_may_apply">Data charges may be applied. Please use wifi to avoid data charges</string>
    <string name="date_added">Date Added</string>
    <string name="default_sync_location">Default Sync Location</string>
    <string name="default_sync_location_desc">The sd card is not available. Do you want to switch to using local storage?</string>
    <string name="delete">Delete</string>
    <string name="delete_from_playlist">Delete from playlist</string>
    <string name="delete_from_queue">Delete from queue</string>
    <string name="delete_song">Delete Song</string>
    <string name="delete_song_confirm">This will delete song permanently from this device, do you want to proceed ?</string>
    <string name="delete_songs">Delete Songs</string>
    <string name="delete_tmp_error">Error deleting temporary file</string>
    <string name="duration">Duration</string>
    <string name="equalizer">Equalizer</string>
    <string name="exit_application">Exit Application</string>
    <string name="file_name">File name</string>
    <string name="filter_cloud">Filter Cloud</string>
    <string name="filter_list">Filter List</string>
    <string name="filter_storage">Filter Storage</string>
    <string name="four">Four</string>
    <string name="go_to">Go to</string>
    <string name="grid_size">Grid size</string>
    <string name="ignore">Ignore</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="invite_earn">Invite </string>
    <string name="library">Library</string>
    <string name="listening">Listening</string>
    <string name="logout">Logout</string>
    <string name="mp3_cutter">MP3 Cutter</string>
    <string name="my_contacts">My Contacts</string>
    <string name="my_history">My History</string>
    <string name="my_profile">My Profile</string>
    <string name="number_of_songs">Number of Songs</string>
    <string name="one">One</string>
    <string name="play_all_songs">Play All</string>
    <string name="rate_us">Rate Us</string>
    <string name="rating">Rating</string>
    <string name="reverse">Reverse</string>
    <string name="save">Save</string>
    <string name="scan_media">Scan Media</string>
    <string name="sd_card">SD Card</string>
    <string name="search">Search</string>
    <string name="search_song_or_artist">Search song or artist</string>
    <string name="settings">Settings</string>
    <string name="share_application">Share Application</string>
    <string name="shuffle_all">Shuffle All</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="sort_by_a_to_z">Sort By A to Z</string>
    <string name="sort_by_date_ascending">Sort By Date Ascending</string>
    <string name="sort_by_date_descending">Sort By Date Descending</string>
    <string name="sort_by_duration_ascending">Sort By Duration Ascending</string>
    <string name="sort_by_duration_descending">Sort By Duration Descending</string>
    <string name="sort_by_z_to_a">Sort By Z to A</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="three">Three</string>
    <string name="title">Title</string>
    <string name="track_number">Track Number</string>
    <string name="trending_songs">Trending Songs</string>
    <string name="two">Two</string>
    <string name="year">Year</string>
</resources>